@@ -40,6 +40,7 @@ Version 7.0.1
   - Fixed ID of datatype DateTime
   - Removed old AssocArray code
   - AssocArray: added export and import of WideString 
+  - Array operators == and != are now defined as const
    
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
